--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
-version: "3.9"  # optional since v1.27.0
 services:
   email-service:
-    build: .
+    build: ./src
     volumes:
-      - .:/srv/app
+      - ./src:/app
